src/css/custom.css
.b-l-2x{border-left-width: 2px}
.b-l-3x{border-left-width: 3px}
.b-l-4x{border-left-width: 4px}
.b-l-5x{border-left-width: 5px}

.b-2x{border-width: 2px}
.b-3x{border-width: 3px}
.b-4x{border-width: 4px}
.b-5x{border-width: 5px}

.r{
    border-radius: @border-radius-base @border-radius-base @border-radius-base @border-radius-base;
}

.r-2x{
    border-radius:  @border-radius-base * 2;
}

.r-3x{
    border-radius:  @border-radius-base * 3;
}

.r-l{
    border-radius: @border-radius-base 0 0 @border-radius-base;
}

.r-r{
    border-radius: 0 @border-radius-base @border-radius-base 0;
}

.r-t{
    border-radius: @border-radius-base @border-radius-base 0 0;
}

.r-b{
    border-radius: 0 0 @border-radius-base @border-radius-base;
}

.m-xxs{margin: 2px 4px}
.m-xs{margin: 5px;}
.m-sm{margin: 10px;}
.m{margin: 15px;}
.m-md{margin: 20px;}
.m-lg{margin: 30px;}
.m-xl{margin: 50px;}
.m-n{margin: 0 !important}

.m-l-none{margin-left: 0 !important}
.m-l-xs{margin-left: 5px;}
.m-l-sm{margin-left: 10px;}
.m-l{margin-left: 15px}
.m-l-md{margin-left: 20px;}
.m-l-lg{margin-left: 30px;}
.m-l-xl{margin-left: 40px;}
.m-l-xxl{margin-left: 50px;}

.m-l-n-xxs{margin-left: -1px}
.m-l-n-xs{margin-left: -5px}
.m-l-n-sm{margin-left: -10px}
.m-l-n{margin-left: -15px}
.m-l-n-md{margin-left: -20px}
.m-l-n-lg{margin-left: -30px}
.m-l-n-xl{margin-left: -40px}
.m-l-n-xxl{margin-left: -50px}

.m-t-none{margin-top:0 !important}
.m-t-xxs{margin-top: 1px;}
.m-t-xs{margin-top: 5px;}
.m-t-sm{margin-top: 10px;}
.m-t{margin-top: 15px}
.m-t-md{margin-top: 20px;}
.m-t-lg{margin-top: 30px;}
.m-t-xl{margin-top: 40px;}
.m-t-xxl{margin-top: 50px;}

.m-t-n-xxs{margin-top: -1px}
.m-t-n-xs{margin-top: -5px}
.m-t-n-sm{margin-top: -10px}
.m-t-n{margin-top: -15px}
.m-t-n-md{margin-top: -20px}
.m-t-n-lg{margin-top: -30px}
.m-t-n-xl{margin-top: -40px}
.m-t-n-xxl{margin-top: -50px}

.m-r-none{margin-right: 0 !important}
.m-r-xxs{margin-right: 1px}
.m-r-xs{margin-right: 5px}
.m-r-sm{margin-right: 10px}
.m-r{margin-right: 15px}
.m-r-md{margin-right: 20px}
.m-r-lg{margin-right: 30px}
.m-r-xl{margin-right: 40px}
.m-r-xxl{margin-right: 50px}

.m-r-n-xxs{margin-right: -1px}
.m-r-n-xs{margin-right: -5px}
.m-r-n-sm{margin-right: -10px}
.m-r-n{margin-right: -15px}
.m-r-n-md{margin-right: -20px}
.m-r-n-lg{margin-right: -30px}
.m-r-n-xl{margin-right: -40px}
.m-r-n-xxl{margin-right: -50px}

.m-b-none{margin-bottom: 0 !important}
.m-b-xxs{margin-bottom: 1px;}
.m-b-xs{margin-bottom: 5px;}
.m-b-sm{margin-bottom: 10px;}
.m-b{margin-bottom: 15px;}
.m-b-md{margin-bottom: 20px;}
.m-b-lg{margin-bottom: 30px;}
.m-b-xl{margin-bottom: 40px;}
.m-b-xxl{margin-bottom: 50px;}

.m-b-n-xxs{margin-bottom: -1px}
.m-b-n-xs{margin-bottom: -5px}
.m-b-n-sm{margin-bottom: -10px}
.m-b-n{margin-bottom: -15px}
.m-b-n-md{margin-bottom: -20px}
.m-b-n-lg{margin-bottom: -30px}
.m-b-n-xl{margin-bottom: -40px}
.m-b-n-xxl{margin-bottom: -50px}



.section:not(:first-child) {
    margin-top:20px;
}


.panel {
    border-radius: 0px;
    border: 1px solid rgb(230,230,230);
}

.panel-heading, .panel-footer{
    background-color: rgb(246,246,246);
}

.panel-heading {
    border-bottom: 1px solid rgb(230,230,230);
}

.panel-heading .panel-default {
    background-color: gray;
}

.panel-footer{
    border-color: gray;
    border-radius: 0 0 5px 5px;
    background-color: gray;
}

a:hover {
    text-decoration: none;
}

.breadcrumb-links {
    font-size: 11px;
}

.menu {
    background-color: rgb(250,166,52);
    color:white;
    margin-top:-20px;
    margin-bottom:20px;
    padding: 5px 15px 5px 15px;
}


.innersidebar-list {
    text-indent: 10px;
}

.innersidebar-list.active {
    color:rgb(160,122,176);
    text-indent: 7px;
    border-left: 3px solid rgb(160,122,176);

}

.innersidebar-list a  {
    text-decoration: none;
    color:#7A7C8B;
}

.header {
    border-bottom: 1px solid rgb(220,220,220);
}

.fnt-xs {
    font-size: 10px;
}

.fnt-sm {
    font-size: 12px;
}

.fnt-rg {
    font-size: 14px;
}

.fnt-lg {
    font-size: 18px;
}

.fnt-xl {
    font-size: 20px;
}

.fnt-wt-thin {
    font-weight: 300;
}

.fnt-wt-rg {
    font-weight: 400;
}

.fnt-wt-bold {
    font-weight: 700;
}

.fnt-wt-xbold {
    font-weight: 800;
}

pre {
    border-radius: 0px;
}

.nav-tabs {
    border-bottom: none;
}

body {
    font-family: 'Open Sans', sans-serif;
}


tr td {
    border: 1px solid white;
}

#sidebar-wrapper {
    top:0px;
}


/*
    Switches that Miro like better 
*/

.onOffSwitch input[type=checkbox]{
    visibility: hidden;
}


/* Positioning and fonts of the labels */
.beaconNameLabel label{
    float: left;
    padding: 17px;
    font-weight: 400;
}

.orgNameLabel label{
    float: left;
    padding: 17px;
    font-weight: 700;
}

.tableHeaders{
    font-size:20px;
    color:#C0C0C0;
    text-align: center;
}

/* 
    Individual beacon switch  
*/
.beaconSwitch input[type=checkbox] {
    visibility: hidden;
}

.beaconSwitch {
    float: right;
    width: 70px;
    height: 24px;
    background: white;
    border: 1px solid #C4C7BE;
    margin: 16px auto;
    position: relative;
}

.beaconSwitch:after {
    content: 'OFF';
    font: 12px/26px Arial, sans-serif;
    color: silver;
    position: absolute;
    right: 5px;
    z-index: 0;
    font-weight: bold;
    text-shadow: 1px 1px 0px rgba(255,255,255,.15);
}

.beaconSwitch:before {
    content: 'ON';
    font: 12px/26px Arial, sans-serif;
    color: #00bf00;
    position: absolute;
    left: 5px;
    z-index: 0;
    font-weight: bold;
}

.beaconSwitch label {
    display: block;
    width: 33px;
    height: 20px;

    -webkit-transition: all .4s ease;
    -moz-transition: all .4s ease;
    -o-transition: all .4s ease;
    -ms-transition: all .4s ease;
    transition: all .4s ease;
    cursor: pointer;
    position: absolute;
    top: 1px;
    left: 1px;
    z-index: 1;

    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
    background: silver;

}

.beaconSwitch input[type=checkbox]:checked + label {
    background: #26ca28;
    left: 34px;
}


/* 
    Master On/Off Switch 
    http://cssdeck.com/labs/css-checkbox-styles
*/
#beaconSwitchButton input[type=checkbox] {
    visibility: hidden;
}

#beaconSwitchButton {
    float: right;
    width: 80px;
    height: 26px;
    background: #474747;
    margin: 25px auto;
    border-radius: 50px;
    position: relative;
}

#beaconSwitchButton:after {
    content: 'OFF';
    font: 12px/26px Arial, sans-serif;
    color: red;
    position: absolute;
    right: 10px;
    z-index: 0;
    font-weight: bold;
    text-shadow: 1px 1px 0px rgba(255,255,255,.15);
}

#beaconSwitchButton:before {
    content: 'ON';
    font: 12px/26px Arial, sans-serif;
    color: #00bf00;
    position: absolute;
    left: 10px;
    z-index: 0;
    font-weight: bold;
}

#beaconSwitchButton label {
    display: block;
    width: 34px;
    height: 20px;

    -webkit-border-radius: 50px;
    -moz-border-radius: 50px;
    border-radius: 50px;

    -webkit-transition: all .4s ease;
    -moz-transition: all .4s ease;
    -o-transition: all .4s ease;
    -ms-transition: all .4s ease;
    transition: all .4s ease;
    cursor: pointer;
    position: absolute;
    top: 3px;
    left: 3px;
    z-index: 1;

    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
    -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
    background: red;

}

#beaconSwitchButton input[type=checkbox]:checked + label {
    background: #26ca28;
    left: 43px;
}
#SwitchLabel{
    float: right;
    color: rgb(71, 71, 71);
    font-size: 20px;
    padding: 22px;

}

